<resources>
    <string name="app_name">GoPiGoRemote</string>

    <string name="main_start_remote">Remote</string>
    <string name="main_settings">Settings</string>
    <string name="main_help">Help</string>
    <string name="main_exit">Exit</string>

    <string name="settings_save">Save</string>
    <string name="settings_send_ip">Destination IP</string>
    <string name="settings_send_port">Destination Port</string>
    <string name="settings_receive_port">Receive Port</string>
    <string name="settings_update_freq">Send Frequency</string>

    <string name="remote_joystick">JOYSTICK</string>

</resources>
