<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="312dp"
            app:srcCompat="?android:attr/fingerprintAuthDrawable" />

        <Button
            android:id="@+id/bRemote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="startRemote"
            android:text="@string/main_start_remote" />

        <Button
            android:id="@+id/bSettings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="startSettings"
            android:text="@string/main_settings" />

        <Button
            android:id="@+id/bHelp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="startHelp"
            android:text="@string/main_help" />

        <Button
            android:id="@+id/bExit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="startExit"
            android:text="@string/main_exit" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>