<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="273dp"
            app:srcCompat="?attr/actionModeShareDrawable" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/ll1"
                android:layout_width="185dp"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:text="@string/settings_send_ip"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="49dp"
                    android:text="@string/settings_send_port"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="47dp"
                    android:text="@string/settings_receive_port"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:text="@string/settings_update_freq"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="46dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll2"
                android:layout_width="194dp"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/etIP"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName" />

                <EditText
                    android:id="@+id/etSendPort"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName" />

                <EditText
                    android:id="@+id/etReceivePort"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName" />

                <EditText
                    android:id="@+id/etUpdateRate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName" />

                <Button
                    android:id="@+id/bSave"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="saveSettings"
                    android:text="@string/settings_save" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>